This file shows the changes in this release of xPDO.

xPDO 3.0.0 (TBD)
====================================
- Improve PSR-4 support by introducing namespace prefixes to model metadata
- Introduce PSR-11 support to replace deprecated container-interop support
- Make json and array phptypes quotable in xPDOQuery
- Replace usages of each with foreach to avoid PHP 7.2 deprecated warnings
- Fix "reference expected" warnings in PHP 7.1
- Introduce xPDOContainer providing container-interop implementation
- Add xPDO\Cache\xPDORedisCache implementation
- Adopt symfony\console 2.x for CLI scripts
- Add phpdoc @property to classes for each field
- Add option to respect PSR-4 namespaces
- Refactor for 5.3+ in the \xPDO namespace

xPDO 2.5.3-pl (Jaunary 3, 2017)
====================================
- Make sure xPDOQuery base class is always loaded

xPDO 2.5.2-pl (December 16, 2016)
====================================
- Sanitize and prevent SQLi in getObject calls expecting PK values
- Make isValidClause a public static method in xPDOQuery
- Allow empty sort direction
- Revert getCriteria change to force scalar params to be PK values
- Make xPDOQuery::isValidClause a public method
- Change constructor in PclZip to be PHP 7 compatible

xPDO 2.5.1-pl (November 14, 2016)
====================================
- Force scalar parameters to be PK values in getCriteria
- Prevent SQLi in sortby, sort direction, and limit clauses
- Detect SQLi clauses when no space exists after UNION

xPDO 2.5.0-pl (February 3, 2016)
====================================
- Optimize and improve logging
- Fix undefined index notice for model indexes
- Allow definition of primary key fields without legacy index="pk"
- Add ARRAY_EXTENDED logTarget that stores an array of data for each log entry

xPDO 2.4.1-pl (September 22, 2015)
====================================
- Optimize xPDO::getOption() for significant performance increase

xPDO 2.4.0-pl (June 26, 2015)
====================================