@@ -18,6 +18,7 @@
         <testsuite name="Complete">
             <file>./xPDO/Test/SetUpTest.php</file>
             <file>./xPDO/Test/xPDOTest.php</file>
+            <file>./xPDO/Test/xPDOIteratorTest.php</file>
             <file>./xPDO/Test/Om/xPDOObjectTest.php</file>
             <file>./xPDO/Test/Om/xPDOObjectSingleTableInheritanceTest.php</file>
             <file>./xPDO/Test/Om/xPDOQueryTest.php</file>
