@@ -1,0 +1,16 @@
+<?php
+namespace xPDO\Test\Sample;
+
+use xPDO\xPDO;
+
+/**
+ * Class SecureItem
+ *
+ * @property string $name
+ * @property boolean $public
+ *
+ * @package xPDO\Test\Sample
+ */
+class SecureItem extends \xPDO\Test\Sample\SecureObject
+{
+}
